--- a/config/example_options.ini
+++ b/config/example_options.ini
@@ -15,7 +15,7 @@
 
 [Credentials]
 ; Put your token here.  Not "secret".  The secret is not the token.
-Token = bot_token
+Token = MzQ1MDEwOTYzMjg1ODAzMDE4.DG1ECg.c2-0h8S6GUI3heCMRy2r0GOclfU
 ; If you want to use a normal user account instead of a bot account, use these lines instead.
 ; Comment the token line and uncomment the Email/Password lines.
 ;Email = bot_discord@email
